# KaliNova

./: DOCKERFILE  LICENSE  LICENSE.md  MAKEFILE  README.md  install.sh  kalinova.py  requeriments.txt
.github/: mermaid.yml
.github/worksflows/: docs.yml  offensive.yml  pentest.yml  tests.yml
Core/: main.py
Core/Ai/: Payload_generator.py  gan_detector.py  predictive_defensive.py  threat_hunting_ai.py
Core/config/: settings.py
Core/exploit/: autopwn.rs  obsfucator.rs
Core/modules/: network_scanner.py  total_integration.py  web_scanner.py
Novavision/: NOVAVISIONCKPRO.py  advanced_main.py  device_database_.json  novavision.py  requeriments.txt
Novavision/Malware/: analyzer.py
Novavision/behavior/: analyzer.py
Novavision/honeypot/: intelligent_honeypot.py
Novavision/incident/: response.py
Novavision/útiles/: Alerts.py  THermal.py  camera.py
Rust_tools/: Cargo.toml
Rust_tools/Novastealth/: Cargo.toml
Rust_tools/Novastealth/Src/: Main.rs
Rust_tools/Packet_sniffer/: Cargo.toml
Rust_tools/Packet_sniffer/Src/: Main.rs  capture.rs
Rust_tools/Packet_sniffer/Src/Example/: deauth_detector.rs
config/: modules.yaml
core/: ai_analizer.py  analyzer.py  scanner.py
core/ENGINE/: Modulo-base.py  Nova_engine.py
core/Exploit_engine/: cve_hunter.py
core/ML/: ML_main.py  deep_threat_detector.py  feature-engineer.py  (+1 more)
langs/: es.json
src/: AdvancedFuzzer.cpp  NetworkAnalyzer.cpp  NetworkAnalyzer.h  advanced_fuzzer.h  main.cpp  test-scanner.cpp  test_fuzzer.cpp  vulnerability_scanner.cpp  vulnerability_scanner.h
templates/: report.md
(+51 files in other folders)
