[package]
name = "kalinova-installer"
version = "0.2.0"
edition = "2021"
description = "Advanced modular installer for KaliNova Red Team distribution"
license = "GPL-3.0"
authors = ["KevinDevSecOps <kalinova@kevinsecops.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.0"
chrono = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-process = "0.2"
signal-hook = "0.3"
indicatif = "0.17"  # For progress bars
console = "0.15"    # For better console output

[build-dependencies]

[[bin]]
name = "kalinova-installer"
path = "src/installer/modular_installer.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
[workspace]
members = [
    "novastealth",
    "packet_sniffer",
    "rfid_tool"
]
